Add bookgenre, config to create book with more detail

--- a/Views/Books/Edit.cshtml
+++ b/Views/Books/Edit.cshtml
@@ -54,7 +54,7 @@
 				{
 					<img id="ImagePreview" src="data:image/jpeg;base64,@Convert.ToBase64String(Model.Image)"
 						 class="rounded shadow img-fluid"
-						 style="max-height: 400px; width: auto;" />
+						 style="height: 400px; width: auto;" />
 				}
 				else
 				{
