--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/LibrarySystem.styles.css" asp-append-version="true" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta3/css/bootstrap-select.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="~/css/library-custom.css" />
 	<style>
 		.navbar-nav .nav-link.active {
@@ -54,6 +55,9 @@
 								<a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
 							</li>
 							<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Genres" asp-action="Index">Genres</a>
+							</li>
+							<li class="nav-item">
 								<span class="nav-link text-dark">Hello, @User.Identity.Name!</span>
 							</li>
 							<li class="nav-item">
@@ -89,6 +93,9 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta3/js/bootstrap-select.min.js" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<!-- Bootstrap-Select JS -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
 
 	<!-- Dynamic active tab script -->
 	<script>
