--- a/Views/Books/Edit.cshtml
+++ b/Views/Books/Edit.cshtml
@@ -80,6 +80,7 @@
 					<select asp-for="Condition" class="form-select" asp-items="ViewBag.ConditionList">
 						<option value="">-- Select Condition --</option>
 					</select>
+					<span asp-validation-for="Condition" class="text-danger"></span>
 				</div>
 			</div>
 		</div>
@@ -95,25 +96,4 @@
 	@{
 		await Html.RenderPartialAsync("_ValidationScriptsPartial");
 	}
-
-	<script>
-		function previewImage(event) {
-			const file = event.target.files[0];
-			const preview = document.getElementById('ImagePreview');
-			const noImageText = document.getElementById('NoImageText');
-
-			if (file) {
-				const reader = new FileReader();
-				reader.onload = function (e) {
-					preview.src = e.target.result;
-					preview.style.display = 'block';
-					noImageText.style.display = 'none';
-				};
-				reader.readAsDataURL(file);
-			} else {
-				preview.style.display = 'none';
-				noImageText.style.display = 'block';
-			}
-		}
-	</script>
 }
