--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -1,8 +1,20 @@
 ﻿@model LibrarySystem.Helpers.PaginatedList<LibrarySystem.Models.Book>
+@using LibrarySystem.Helpers
 
 @{
 	ViewData["Title"] = "Index";
 }
+
+<style>
+	.wrap-text {
+		max-width: 150px;
+		max-height: 4.5em;
+		overflow: auto;
+		white-space: normal;
+		word-wrap: break-word;
+	}
+</style>
+
 
 <div class="d-flex flex-column" style="min-height: 90vh">
 	<!-- Content container -->
@@ -23,23 +35,32 @@
 			</div>
 		</div>
 
-		<table class="table table-bordered table-striped">
-			<thead class="thead-dark">
+		<table class="table table-bordered table-striped table-responsive small align-middle">
+			<thead class="thead-dark text-center">
 				<tr>
-					<th>@Html.DisplayNameFor(model => model.First().Title)</th>
-					<th>@Html.DisplayNameFor(model => model.First().Description)</th>
-					<th>@Html.DisplayNameFor(model => model.First().Author)</th>
-					<th class="text-center">Actions</th>
+					<th style="width: 15%;">@Html.DisplayNameFor(model => model.First().Title)</th>
+					<th style="width: 20%;">@Html.DisplayNameFor(model => model.First().Description)</th>
+					<th style="width: 10%;">@Html.DisplayNameFor(model => model.First().Author)</th>
+					<th style="width: 10%;">ISBN</th>
+					<th style="width: 10%;">Publish Date</th>
+					<th style="width: 5%;">Condition</th>
+					<th style="width: 5%;">Available</th>
+					<th class="text-center" style="width: 25%;">Actions</th>
 				</tr>
 			</thead>
 			<tbody>
 				@foreach (var item in Model)
 				{
-					<tr>
-						<td>@Html.DisplayFor(modelItem => item.Title)</td>
-						<td>@Html.DisplayFor(modelItem => item.Description)</td>
-						<td>@Html.DisplayFor(modelItem => item.Author.Name)</td>
-						<td class="d-inline-flex justify-content-center w-100 gap-2">
+					<tr class="text-center">
+						<td class="text-truncate wrap-text">@Html.Truncate(item.Title)</td>
+						<td class="text-truncate text-start wrap-text">@Html.Truncate(item.Description)</td>
+						<td class="text-truncate wrap-text">@Html.Truncate(item.Author?.Name)</td>
+						<td class="text-truncate wrap-text">@Html.Truncate(item.ISBN)</td>
+						<td>@item.PublishDate?.ToString("yyyy-MM-dd")</td>
+						<td>@item.Condition</td>
+						<td>@(item.IsAvailable ? "Yes" : "No")</td>
+						<td class="text-center" style="height: 100%;">
+							<div class="d-flex justify-content-center align-items-center gap-2 h-100">
 							<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-info btn-sm text-white">
 								<i class="bi bi-info-circle me-1"></i>Details
 							</a>
@@ -51,11 +72,13 @@
 									<i class="bi bi-trash me-1"></i>Delete
 								</a>
 							</admin-only>
+							</div>
 						</td>
 					</tr>
 				}
 			</tbody>
 		</table>
+
 	</div>
 
 	<!-- Pagination Section -->
