--- a/wwwroot/css/library-custom.css
+++ b/wwwroot/css/library-custom.css
@@ -84,3 +84,10 @@ a {
     color: var(--bs-secondary-text);
 }
 
+.text-truncate {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
