--- a/Views/Roles/Index.cshtml
+++ b/Views/Roles/Index.cshtml
@@ -9,7 +9,7 @@
 
     <!-- Button to trigger Create Role Modal -->
     <p>
-        <button class="btn btn-primary" data-toggle="modal" data-target="#createModal">+ Create New Role</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal">+ Create New Role</button>
     </p>
 
     <!-- Table to display roles -->
